# LegalLint

./: .gitignore  README.md  legallint.yaml  pyproject.toml
legallint/: __init__.py  lint.py  plugin.py  utils.py
legallint/license/: licenses.json  resources.txt  update.py
legallint/plugins/: for_npm.py  for_python.py
legallint/plugins/node/: main.py
legallint/plugins/python/: main.py  update.py
legallint/scripts/: legallint_tool.py
tests/: test_license.py
tests/test_python/: legallint.yaml
tests/test_python_toml/: pyproject.toml
