[tool.poetry]
name = "legallint"
version = "1.1.3"
description = "LegalLint: A Multi-Language License Compliance Linter"
authors = ["Kiran Kumar Kotari <kirankotari@live.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/kirankotari/LegalLint"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
toml = "^0.10.2"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[licenses]
allowed = ["MIT", "Apache-2.0", "BSD-3-Clause"]
trigger_error = ["GPL-3.0", "AGPL-3.0", "Proprietary", "Unknown"]
skip_libraries = []
